[tool.poetry]
name = "py-tsbs-benchmark"
version = "0.1.0"
description = "Benchmark ingestion of the TSBS dataset into QuestDB via ILP using the `questdb` Python library and Pandas"
authors = ["Adam Cimarosti <cimarosti@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [{include = "py_tsbs_benchmark"}]

[tool.poetry.dependencies]
python = "^3.10"
questdb = "^1.1.0"
pandas = "^1.5.2"
pyarrow = "^10.0.1"
numba = "^0.56.4"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
black = "^23.0.0"
flake8 = "^5.0.0"
mypy = "^1.0.0"

[tool.poetry.scripts]
bench_pandas = "py_tsbs_benchmark.bench_pandas:main"
bench_raw_ilp = "py_tsbs_benchmark.bench_raw_ilp:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--disable-warnings",
    "-v"
]

[tool.coverage.run]
source = ["py_tsbs_benchmark"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
